# inference-engine

./: CMakeLists.txt  README.md
.github/: pull_request_template.md
src/: args.h  coqui-engine.h  main.cc  modelstate.cc  modelstate.h  onnxmodelstate.cc  onnxmodelstate.h  stt.cc  stt_errors.cc
src/ctcdecode/: scorer.cpp  scorer.h
